# abagen

./: .gitattributes  .gitignore  .travis.yml  .zenodo.json  CHANGELOG  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README.rst  azure-pipelines.yml  dev_requirements.txt  requirements.txt  setup.cfg  setup.py
.azure-pipelines/: windows.yml
.circleci/: config.yml
.github/workflows/: tests.yml
abagen/: __init__.py  _version.py  allen.py  correct.py  datasets.py  images.py  info.py  io.py  matching.py  mouse.py  probes.py  probes_.py  process.py  processing.py  reporting.py  samples.py  samples_.py  surfaces.py  testabagen.py  transforms.py  utils.py
abagen/cli/: run.py
abagen/cli/tests/: test_run.py
abagen/data/: all_genes_available.csv  atlas-desikankilliany.csv  burt2018_natneuro.csv  donor_info.csv  roilabels-rubinov2015pnas.csv  rubinov2015_pnas.csv
abagen/datasets/: __init__.py  datasets.py  fetchers.py  utils.py
abagen/mouse/: __init__.py  gene.py  io.py  mouse.py  my_own_test.py  structure.py  utils.py
abagen/mouse/tests/: test_gene.py  test_io.py  test_mouse.py  test_structure.py
abagen/tests/: conftest.py  test_allen.py  test_cli.py  test_correct.py  test_datasets.py  test_images.py  test_io.py  test_matching.py  test_probes.py  test_process.py  test_reporting.py  test_samples.py  test_surfaces.py  test_transforms.py  test_utils.py  utils.py
abagen/tests/cli/: test_run.py
abagen/tests/datasets/: test_fetchers.py  test_utils.py
abagen/tests/mouse/: test_mouse.py
docs/: Makefile  api.rst  changes.rst  citing.rst  cli.rst  conf.py  contributing.rst  index.rst  installation.rst  requirements.txt  usage.rst
docs/_templates/: class.rst
docs/user_guide/: aggregation.rst  donors.rst  download.rst  expression.rst  mask.rst  normalization.rst  parcellations.rst  probes.rst  reporting.rst
paper/: paper.bib  paper.md
tools/: update_changes.sh  update_readme.py
