[metadata]
name = abagen
url = https://github.com/rmarkello/abagen
download_url = https://github.com/rmarkello/abagen
author = abagen developers
maintainer = Ross Markello
maintainer_email = rossmarkello@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
license = BSD-3
description = A toolbox for working with the Allen Brain Atlas human genetic data
long_description = file:README.rst
long_description_content_type = text/x-rst; charset=UTF-8
platforms = OS Independent
provides =
    abagen

[options]
python_requires = >=3.5.1
install_requires =
    nibabel
    nilearn
    numpy >=1.14
    pandas
    scipy
tests_require =
    pytest >=3.6
test_suite = pytest
zip_safe = False
packages = find:
include_package_data = True

[options.extras_require]
doc =
    sphinx >=1.2
    sphinx_rtd_theme
io =
    fastparquet
    python-snappy
style =
    flake8
test =
    pytest-cov
all =
    %(doc)s
    %(io)s
    %(test)s


[options.package_data]
nibabel =
    tests/data/*
    abagen/data/*

[flake8]
doctests = True
exclude =
    *build/
    *sphinx*
    */__init__.py
ignore = W503, E402
max-line-length = 79

[tool:pytest]
doctest_optionflags = NORMALIZE_WHITESPACE
xfail_strict = true
addopts = -rx

[versioneer]
VCS = git
style = pep440
versionfile_source = abagen/_version.py
versionfile_build = abagen/_version.py
tag_prefix =
parentdir_prefix =
