[metadata]
name = abagen
url = https://github.com/rmarkello/abagen
download_url = https://github.com/rmarkello/abagen
author = abagen developers
maintainer = Ross Markello
maintainer_email = rossmarkello@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Scientific/Engineering
license = BSD-3
description = A toolbox for working with the Allen Brain Atlas genetic data
long_description = file:README.rst
long_description_content_type = text/x-rst; charset=UTF-8
platforms = OS Independent
provides =
    abagen

[options]
python_requires = >=3.6
install_requires =
    nibabel
    numpy >=1.14
    pandas
    scipy
zip_safe = False
packages = find:
include_package_data = True

[options.extras_require]
doc =
    sphinx >=2.0
    sphinx-argparse
    sphinx_rtd_theme
io =
    fastparquet
    python-snappy
style =
    flake8
test =
    coverage
    pytest >= 3.6
    pytest-cov
all =
    %(doc)s
    %(io)s
    %(test)s

[options.package_data]
abagen =
    abagen/data/*
    abagen/tests/data/*

[options.entry_points]
console_scripts =
    abagen=abagen.cli.run:main

[coverage:run]
omit =
    */abagen/_version.py

[flake8]
doctests = True
exclude =
    *build/
    *sphinx*
    */__init__.py
ignore = W503, E402
max-line-length = 79

[tool:pytest]
doctest_optionflags = NORMALIZE_WHITESPACE
xfail_strict = true
addopts = -rx

[versioneer]
VCS = git
style = pep440
versionfile_source = abagen/_version.py
versionfile_build = abagen/_version.py
tag_prefix =
parentdir_prefix =
